# cursive_buffered_backend

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ReleaseInstructions.md  release.toml
examples/: dialog_with_emoji.rs
src/: buffer.rs  lib.rs  rect.rs  smallstring.rs
