[package]
name = "cursive_buffered_backend"
version = "0.4.2-pre"
authors = ["Alexander Gavrilov <agavrilov@users.noreply.github.com>"]
license = "MIT"
categories = ["command-line-interface"]
keywords = ["termion", "TUI", "UI", "Cursive"]
readme = "README.md"
repository = "https://github.com/agavrilov/cursive_buffered_backend"
description = "The buffering backend for any Cursive backend"
edition = "2018"

[dependencies]
smallvec = "1"
unicode-segmentation = "1"
unicode-width = "0"
enumset = "1"
log = "0"

[dependencies.cursive_core]
version = ">=0.1"

[badges]
travis-ci = { repository = "agavrilov/cursive_buffered_backend"}
